--- a/assets/package.json
+++ b/assets/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "daisyui": "^4.4.4",
     "tailwindcss": "^3.3.5"
+  },
+  "dependencies": {
+    "simple-scrollspy": "^2.4.0"
   }
 }
