--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^3.3.5"
   },
   "dependencies": {
-    "simple-scrollspy": "^2.4.0"
+    "simple-scrollspy": "^2.4.0",
+    "sortablejs": "^1.15.1"
   }
 }
